[gd_scene load_steps=2 format=3 uid="uid://cdtkotoedapae"]

[ext_resource type="Script" uid="uid://cvh8rrwf56okr" path="res://scenes/character_creation/character_creation_step1.gd" id="1_wqe2v"]

[node name="CharacterCreationStep1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqe2v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(1000, 650)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CHARACTER CREATION - STEP 1"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="CharacterNameLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CHARACTER NAME"
horizontal_alignment = 1

[node name="NameSpacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="CharacterNameInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Enter character name..."
alignment = 1

[node name="NameSpacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Column1" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="RaceContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column1"]
layout_mode = 2

[node name="BackgroundContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column1"]
layout_mode = 2

[node name="FeaturesContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column1"]
layout_mode = 2

[node name="ColumnSpacer1" type="Control" parent="CenterContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="Column2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="PortraitAvatarContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PortraitSubColumn" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/PortraitAvatarContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PortraitLabel" type="Label" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/PortraitAvatarContainer/PortraitSubColumn"]
layout_mode = 2
size_flags_horizontal = 4
text = "PORTRAIT"
horizontal_alignment = 1

[node name="PortraitSpacer" type="Control" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/PortraitAvatarContainer/PortraitSubColumn"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PortraitContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/PortraitAvatarContainer/PortraitSubColumn"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="AvatarSubColumn" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/PortraitAvatarContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="AvatarLabel" type="Label" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/PortraitAvatarContainer/AvatarSubColumn"]
layout_mode = 2
size_flags_horizontal = 4
text = "AVATAR"
horizontal_alignment = 1

[node name="AvatarSpacer" type="Control" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/PortraitAvatarContainer/AvatarSubColumn"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="AvatarContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/PortraitAvatarContainer/AvatarSubColumn"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="AvatarSprite" type="TextureRect" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/PortraitAvatarContainer/AvatarSubColumn/AvatarContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SexSpacer" type="Control" parent="CenterContainer/VBoxContainer/ContentContainer/Column2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SexContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SexLabel" type="Label" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/SexContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SELECT SEX"
horizontal_alignment = 1

[node name="SexSpacer" type="Control" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/SexContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SexButtonsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/SexContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MaleButton" type="Button" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/SexContainer/SexButtonsContainer"]
physics_interpolation_mode = 0
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Male"

[node name="SexButtonSpacer" type="Control" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/SexContainer/SexButtonsContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="FemaleButton" type="Button" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/SexContainer/SexButtonsContainer"]
physics_interpolation_mode = 0
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Female"

[node name="SexSpacer2" type="Control" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/SexContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TraitsSection" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TraitsLabel" type="Label" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/TraitsSection"]
layout_mode = 2
size_flags_horizontal = 4
text = "TRAITS"
horizontal_alignment = 1

[node name="TraitsSpacer" type="Control" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/TraitsSection"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="TraitsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/TraitsSection"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TraitPanel" type="Panel" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/TraitsSection/TraitsContainer"]
custom_minimum_size = Vector2(0, 270)
layout_mode = 2

[node name="TraitContent" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/TraitsSection/TraitsContainer/TraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TraitMargin" type="MarginContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/TraitsSection/TraitsContainer/TraitPanel/TraitContent"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TraitInfo" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/TraitsSection/TraitsContainer/TraitPanel/TraitContent/TraitMargin"]
layout_mode = 2

[node name="TraitsSpacer2" type="Control" parent="CenterContainer/VBoxContainer/ContentContainer/Column2/TraitsSection"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="PointsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Points remaining: 5"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
physics_interpolation_mode = 0
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Back"

[node name="ButtonSpacer" type="Control" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
physics_interpolation_mode = 0
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonsContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonsContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
